# reservation-discounts

./: .gitignore  README.md  pyproject.toml  template.py
config/: all_schema.yaml  data-ingestion.yaml  data-transformation.yaml  data-validation.yaml  data_drift.yaml  model-evaluation.yaml  model-params.yaml  model-trainer.yaml
experiment/: trial_01_data_ingestion.py  trial_02_data_drift.py  trial_02_data_validation.py  trial_03_data_transformation.py  trial_04_model_trainer.py  trial_05_model_evaluation.py
notebooks/: hotel_bookings.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/ReservationDiscounts/: exception.py  logger.py
src/ReservationDiscounts/components/: c_01_data_ingestion.py  c_02_data_drift.py  c_02_data_validation.py  c_03_data_transformation.py
src/ReservationDiscounts/config_entity/: config_params.py
src/ReservationDiscounts/config_manager/: config_settings.py
src/ReservationDiscounts/constants/: __init__.py
src/ReservationDiscounts/data/: mongoDB.py
src/ReservationDiscounts/pipelines/: pip_01_data_ingestion.py
src/ReservationDiscounts/utils/: commons.py
